--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Aaron Jones
+page.title: title
 email: aaroncj@pm.me
 description: >- # this means to ignore newlines until "baseurl:"
   Aaron Jones, Software Engineer. Primarily working with Java SpringBoot writing REST APIs
@@ -30,6 +31,15 @@ github_username:  aaroncj1
 theme: minima
 plugins:
   - jekyll-feed
+
+show_excerpts: true
+
+minima:
+  skin: dark
+
+header_pages:
+  - projects.markdown
+  - about.markdown
 
 # Exclude from processing.
 # The following items will not be processed, by default.
